Fixed file upload button alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,23 @@ label[for="chat-input"] {
     margin-bottom: 10px;
 }
 
+#existing-documents-header
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 /* File upload styles */
+
+#upload-documents-copy
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left:12px;
+    padding-top:4px
+}
 
 #file-upload {
     display: flex;
@@ -315,6 +331,12 @@ label[for="chat-input"] {
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #f9f9f9;
+}
+
+#upload-button-container {
+    display: flex;
+        justify-content: flex-end;
+        margin-top: 10px;
 }
 
 .file-label {
@@ -416,8 +438,13 @@ label[for="chat-input"] {
     transition: background-color 0.3s ease;
 }
 
-.upload-button:hover {
-    background-color: rgba(13, 12, 52, 1);
+.upload-button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.upload-button:hover:enabled {
+    background-color: #0056b3;
 }
 
 #upload-info {
@@ -436,4 +463,9 @@ label[for="chat-input"] {
     padding: 5px;
     border: 1px solid #ddd;
     border-radius: 4px;
+}
+
+#filter-input::placeholder {
+    padding-left: 5px;
+    /* Add padding to the placeholder text */
 }
